[gd_scene load_steps=8 format=3 uid="uid://3g7j0rcg621v"]

[ext_resource type="Texture2D" uid="uid://jixuq18an82o" path="res://src/graphics/misc/game_tip_background.png" id="1_gemco"]
[ext_resource type="Script" uid="uid://c3opx5bjc0r15" path="res://src/scenes/game_tips.gd" id="1_pg6oj"]
[ext_resource type="PackedScene" uid="uid://dne3s6qipaljp" path="res://src/misc/sound_effect.tscn" id="2_ngg82"]

[sub_resource type="LabelSettings" id="LabelSettings_gemco"]
font_size = 28
font_color = Color(1, 0.890196, 0.717647, 1)
outline_size = 8
outline_color = Color(0.909804, 0.560784, 0.14902, 1)
shadow_size = 16
shadow_color = Color(0.909804, 0.560784, 0.14902, 0.388235)
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_ngg82"]
font_size = 28
font_color = Color(0.992157, 0.933333, 0.898039, 1)
outline_size = 8
outline_color = Color(0.826364, 0.384258, 0.0967456, 1)
shadow_size = 12
shadow_color = Color(0.909804, 0.560784, 0.14902, 0.219608)
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_pg6oj"]
font_size = 28
font_color = Color(0.992157, 0.984314, 0.956863, 1)
outline_size = 8
outline_color = Color(0.290196, 0.0862745, 0.0901961, 1)
shadow_size = 12
shadow_color = Color(0.290196, 0.0862745, 0.0901961, 0.490196)
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_0n121"]
font_size = 28
font_color = Color(0.992157, 0.933333, 0.898039, 1)
outline_size = 8
outline_color = Color(0.458824, 0.113725, 0, 1)
shadow_size = 12
shadow_color = Color(0.909804, 0.560784, 0.14902, 0.219608)
shadow_offset = Vector2(0, 0)

[node name="GameTips" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pg6oj")
metadata/_edit_lock_ = true
metadata/_edit_vertical_guides_ = [427.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Tip1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gemco")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="Tip1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -255.5
offset_top = 42.667
offset_right = 256.5
offset_bottom = 71.667
grow_horizontal = 2
text = "tip.default_keys"
label_settings = SubResource("LabelSettings_gemco")
horizontal_alignment = 1

[node name="K_Interact" type="Label" parent="Tip1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_top = 105.0
offset_right = -32.444
offset_bottom = 134.0
grow_horizontal = 2
text = "tip.default_keys.interact"
label_settings = SubResource("LabelSettings_ngg82")
horizontal_alignment = 2

[node name="V" type="Label" parent="Tip1/K_Interact"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 64.0
offset_right = 419.556
offset_bottom = 29.0
grow_horizontal = 0
text = "[SPACE]"
label_settings = SubResource("LabelSettings_pg6oj")

[node name="K_Cancel" type="Label" parent="Tip1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_top = 145.0
offset_right = -32.444
offset_bottom = 174.0
grow_horizontal = 2
text = "tip.default_keys.cancel"
label_settings = SubResource("LabelSettings_ngg82")
horizontal_alignment = 2

[node name="V" type="Label" parent="Tip1/K_Cancel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 64.0
offset_right = 419.556
offset_bottom = 29.0
grow_horizontal = 0
text = "[ESC][X]"
label_settings = SubResource("LabelSettings_pg6oj")

[node name="K_Move" type="Label" parent="Tip1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_top = 201.0
offset_right = -32.444
offset_bottom = 230.0
grow_horizontal = 2
text = "tip.default_keys.move"
label_settings = SubResource("LabelSettings_ngg82")
horizontal_alignment = 2

[node name="V" type="Label" parent="Tip1/K_Move"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 64.0
offset_right = 419.556
offset_bottom = 29.0
grow_horizontal = 0
text = "[WASD]"
label_settings = SubResource("LabelSettings_pg6oj")

[node name="K_Run" type="Label" parent="Tip1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_top = 241.0
offset_right = -32.444
offset_bottom = 270.0
grow_horizontal = 2
text = "tip.default_keys.run"
label_settings = SubResource("LabelSettings_ngg82")
horizontal_alignment = 2

[node name="V" type="Label" parent="Tip1/K_Run"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 64.0
offset_right = 419.556
offset_bottom = 29.0
grow_horizontal = 0
text = "[SHIFT]"
label_settings = SubResource("LabelSettings_pg6oj")

[node name="K_Settings" type="Label" parent="Tip1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_top = 297.0
offset_right = -32.444
offset_bottom = 326.0
grow_horizontal = 2
text = "tip.default_keys.settings"
label_settings = SubResource("LabelSettings_ngg82")
horizontal_alignment = 2

[node name="V" type="Label" parent="Tip1/K_Settings"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 64.0
offset_right = 419.556
offset_bottom = 29.0
grow_horizontal = 0
text = "[M]"
label_settings = SubResource("LabelSettings_pg6oj")

[node name="K_Items" type="Label" parent="Tip1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_top = 337.0
offset_right = -32.444
offset_bottom = 366.0
grow_horizontal = 2
text = "tip.default_keys.items"
label_settings = SubResource("LabelSettings_ngg82")
horizontal_alignment = 2

[node name="V" type="Label" parent="Tip1/K_Items"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 64.0
offset_right = 419.556
offset_bottom = 29.0
grow_horizontal = 0
text = "[N][I]"
label_settings = SubResource("LabelSettings_pg6oj")

[node name="K_Teleport" type="Label" parent="Tip1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -388.0
offset_top = 377.0
offset_right = -32.444
offset_bottom = 406.0
grow_horizontal = 2
text = "tip.default_keys.teleport"
label_settings = SubResource("LabelSettings_ngg82")
horizontal_alignment = 2

[node name="V" type="Label" parent="Tip1/K_Teleport"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 64.0
offset_right = 419.556
offset_bottom = 29.0
grow_horizontal = 0
text = "[T]"
label_settings = SubResource("LabelSettings_pg6oj")

[node name="Tip2" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gemco")
expand_mode = 1
stretch_mode = 5
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="Tip2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -255.5
offset_top = 43.0
offset_right = 256.5
offset_bottom = 72.0
grow_horizontal = 2
text = "tip.about_game"
label_settings = SubResource("LabelSettings_gemco")
horizontal_alignment = 1

[node name="Content" type="Label" parent="Tip2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 100.0
offset_right = -48.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
text = "tip.about_game.content"
label_settings = SubResource("LabelSettings_0n121")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="Tip2"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -160.0
offset_right = 400.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
text = "tip.about_game.2"
label_settings = SubResource("LabelSettings_0n121")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Tip2"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -40.0
offset_right = 400.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
text = "tip.about_game.3"
label_settings = SubResource("LabelSettings_0n121")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Tip2"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 80.0
offset_right = 400.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
text = "tip.about_game.4"
label_settings = SubResource("LabelSettings_0n121")
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Tip2"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 152.0
offset_right = 400.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
text = "tip.about_game.5"
label_settings = SubResource("LabelSettings_0n121")
horizontal_alignment = 1

[node name="Label6" type="Label" parent="Tip2"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = 224.0
offset_right = 400.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
text = "tip.about_game.6"
label_settings = SubResource("LabelSettings_0n121")
horizontal_alignment = 1

[node name="SoundEffect" parent="." instance=ExtResource("2_ngg82")]
